--- a/views/pd/charaKolomPrice/folMosholla/folMosholla.ejs
+++ b/views/pd/charaKolomPrice/folMosholla/folMosholla.ejs
@@ -35,8 +35,9 @@
 
                     </div>
 
-                     <input type="button" id="btnExport" value="Download PDF" />
-
+                    <button onclick="exportToPdf()" class="btn btn-success">
+                        Download PDF
+                    </button>
                    <div id="output"></div>
                     
 <!--                    <div id="loading" class="loading"><img src="{{ asset('assets/img/icon/loading.gif') }}" alt=""></div>-->
@@ -46,6 +47,20 @@
     </div>
 
     <%- include('../../../includes/footer')-%>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script>
+        async function exportToPdf() {
+            var year = $('#startDate').val();
+            var center = $('#center').val();
+            const { data } = await axios.post(`/pd/generatePdfMonthlyProgress`,{year: year, center:center});
+            var mywindow = window.open("", "PRINT", "height=400,width=600");
+            mywindow.document.write(data.html);
+            mywindow.document.close(); // necessary for IE >= 10
+            mywindow.focus(); // necessary for IE >= 10*/
+            mywindow.print();
+            return true;
+        }
+    </script>
 
     <script>
         
