--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -3,7 +3,7 @@
     <a class="header-brand" href="#">
       <!-- <% console.log("sidebar", locals.type) %> -->
 
-      <span class="text"> <% %> </span>
+      <span class="text"> <% locals.user_name %> </span>
     </a>
 
   </div>
@@ -11,169 +11,59 @@
 
 
   <% if(locals.type === "pd"){%>
-        <div class="sidebar-content">
-          <div class="nav-container">
-            <nav id="main-menu-navigation" class="navigation-main">
-              <div class="nav-lavel">Navigation</div>
-              <div class="nav-item active">
-                <a href="/pd/dashboard"><i class="ik ik-bar-chart-2"></i><span>ড্যাশবোর্ড</span></a>
-              </div>
-              <div class="nav-item ">
-                <a href="/pd/center"><i class="ik ik-gitlab"></i><span>সেন্টার ইনফরমেশন</span> </a>
-              </div>
-              <div class="nav-item ">
-                <a href="/pd/adminInfo"><i class="ik ik-gitlab"></i><span>সেন্ট্রাল এডমিন ইনফরমেশন</span> </a>
-              </div>
-
-              <!-- <div class="nav-item">
-                        <a href="/pd/newcropCategoryList"><i class="ik ik-command"></i><span>মাসিক প্রতিবেদনের ক্যাটাগরিসমূহ</span></a>
-                    </div> -->
-
-              <div class="nav-lavel">প্রতিবেদন</div>
-              <div class="nav-item">
-                <a href="/pd/monthlyProgress"><i class="ik ik-package"></i><span>মাসিক প্রতিবেদন</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/topSheet"><i class="ik ik-box"></i><span>মাসিক টপশীট (উৎপাদন)</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/topSheetBitoron"><i class="ik ik-box"></i><span>মাসিক টপশীট (বিতরণ)</span></a>
-              </div>
-
-              <div class="nav-lavel">হিসাব</div>
-
-              <div class="nav-item">
-                <a href="/pd/expense"><i class="ik ik-command"></i><span>খরচের বিবরণী</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/rajossho"><i class="ik ik-command"></i><span>রাজস্ব</span></a>
-              </div>
-
-
-              <div class="nav-lavel">কর্মকতা/কর্মচারীদের ডাটাবেজ</div>
-              <div class="nav-item">
-                <a href="/pd/chak1"><i class="ik ik-package"></i><span>কর্মকতা/কর্মচারীদের তথ্য</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/chak2"><i class="ik ik-box"></i><span>কর্মকতা/কর্মচারীদের <br>পদের সংখ্যা</span></a>
-              </div>
-
-              <div class="nav-lavel">শ্রমিকদের ডাটাবেজ</div>
-              <div class="nav-item">
-                <a href="/pd/workerInfo"><i class="ik ik-package"></i><span>শ্রমিকদের তথ্য</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/workerNum"><i class="ik ik-box"></i><span>শ্রমিকদের সংখ্যা</span></a>
-              </div>
-
-
-
-
-              <div class="nav-lavel">এপিএ</div>
-              <div class="nav-item">
-                <a href="/pd/apa"><i class="ik ik-box"></i><span>এপিএ রিপোর্টিং</span></a>
-
-              </div>
-              <div class="nav-lavel">বিশেষ নারিকেল ও রিভলভিং ফান্ড</div>
-              <div class="nav-item">
-                <a href="/pd/specialCoconut"><i class="ik ik-box"></i><span>বিশেষ নারিকেল</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/revolvingFund"><i class="ik ik-box"></i><span>রিভলভিং ফান্ড</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/loan"><i class="ik ik-gitlab"></i><span>লোন বিতরণ রিপোর্টিং</span> </a>
-              </div>
-
-              <div class="nav-lavel">কোডসমূহ</div>
-              <div class="nav-item">
-                <a href="/pd/newRajosshoCodeTable"><i class="ik ik-command"></i><span>রাজস্ব প্রাপ্তির কোডসমূহ</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/newKhorochTable"><i class="ik ik-command"></i><span>খরচের (বিএস্টেটমেন্ট) কোডসমূহ</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/newPodobiTable"><i class="ik ik-command"></i><span>কর্মকর্তা কর্মচারীদের পদবী <br>ও গ্রেডের তালিকা</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/cropCategoryTable"><i class="ik ik-command"></i><span></span>ফসলের ক্যাটাগরিসমূহ</a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/apaCategoryTable"><i class="ik ik-command"></i><span></span>এপিএ ক্যাটাগরিসমূহ</a>
-              </div>
-              <div class="nav-lavel">চারা কলম মূল্য তালিকা</div>
-              <div class="nav-item">
-                <a href="/pd/charakolom"><i class="ik ik-package"></i><span>চারা/কলম</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/folMosholla"><i class="ik ik-box"></i><span>ফল/মসলা ও শাক-সবজি</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/winterVeg"><i class="ik ik-package"></i><span>শীতকালীন সবজি ও অন্যান্য</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/summerVeg"><i class="ik ik-box"></i><span>গ্রীষ্মকালীন সবজি ও অন্যান্য</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/otherFlower"><i class="ik ik-package"></i><span>বিভিন্ন ফুল ও সুদৃশ্য গাছ</span></a>
-              </div>
-              <div class="nav-item">
-                <a href="/pd/seasonalFlower"><i class="ik ik-box"></i><span>মৌসুমী ফুল ও চারা</span></a>
-              </div>
-
-            </nav>
-          </div>
-        </div>
-  </div>
-
-  <% }else { %>
   <div class="sidebar-content">
     <div class="nav-container">
       <nav id="main-menu-navigation" class="navigation-main">
         <div class="nav-lavel">Navigation</div>
         <div class="nav-item active">
-          <a href="/center/dashboard"><i class="ik ik-bar-chart-2"></i><span>ড্যাশবোর্ড</span></a>
+          <a href="/pd/dashboard"><i class="ik ik-bar-chart-2"></i><span>ড্যাশবোর্ড</span></a>
         </div>
         <div class="nav-item ">
-          <a href="/center/center"><i class="ik ik-gitlab"></i><span>সেন্টার ইনফরমেশন</span> </a>
+          <a href="/pd/center"><i class="ik ik-gitlab"></i><span>সেন্টার ইনফরমেশন</span> </a>
         </div>
+        <div class="nav-item ">
+          <a href="/pd/adminInfo"><i class="ik ik-gitlab"></i><span>সেন্ট্রাল এডমিন ইনফরমেশন</span> </a>
+        </div>
+
+        <!-- <div class="nav-item">
+                        <a href="/pd/newcropCategoryList"><i class="ik ik-command"></i><span>মাসিক প্রতিবেদনের ক্যাটাগরিসমূহ</span></a>
+                    </div> -->
 
         <div class="nav-lavel">প্রতিবেদন</div>
         <div class="nav-item">
-          <a href="/center/monthlyProgress"><i class="ik ik-package"></i><span>মাসিক প্রতিবেদন</span></a>
+          <a href="/pd/monthlyProgress"><i class="ik ik-package"></i><span>মাসিক প্রতিবেদন</span></a>
         </div>
         <div class="nav-item">
-          <a href="/center/topSheet"><i class="ik ik-box"></i><span>মাসিক টপশীট (উৎপাদন)</span></a>
+          <a href="/pd/topSheet"><i class="ik ik-box"></i><span>মাসিক টপশীট (উৎপাদন)</span></a>
         </div>
         <div class="nav-item">
-          <a href="/center/topSheetBitoron"><i class="ik ik-box"></i><span>মাসিক টপশীট (বিতরণ)</span></a>
+          <a href="/pd/topSheetBitoron"><i class="ik ik-box"></i><span>মাসিক টপশীট (বিতরণ)</span></a>
         </div>
 
         <div class="nav-lavel">হিসাব</div>
 
         <div class="nav-item">
-          <a href="/center/expense"><i class="ik ik-command"></i><span>খরচের বিবরণী</span></a>
+          <a href="/pd/expense"><i class="ik ik-command"></i><span>খরচের বিবরণী</span></a>
         </div>
         <div class="nav-item">
-          <a href="/center/rajossho"><i class="ik ik-command"></i><span>রাজস্ব</span></a>
+          <a href="/pd/rajossho"><i class="ik ik-command"></i><span>রাজস্ব</span></a>
         </div>
-
 
 
         <div class="nav-lavel">কর্মকতা/কর্মচারীদের ডাটাবেজ</div>
         <div class="nav-item">
-          <a href="/center/chak1"><i class="ik ik-package"></i><span>কর্মকতা/কর্মচারীদের তথ্য</span></a>
+          <a href="/pd/chak1"><i class="ik ik-package"></i><span>কর্মকতা/কর্মচারীদের তথ্য</span></a>
         </div>
         <div class="nav-item">
-          <a href="/center/chak2"><i class="ik ik-box"></i><span>কর্মকতা/কর্মচারীদের <br>পদের সংখ্যা</span></a>
+          <a href="/pd/chak2"><i class="ik ik-box"></i><span>কর্মকতা/কর্মচারীদের <br>পদের সংখ্যা</span></a>
         </div>
 
         <div class="nav-lavel">শ্রমিকদের ডাটাবেজ</div>
         <div class="nav-item">
-          <a href="/center/workerInfo"><i class="ik ik-package"></i><span>শ্রমিকদের তথ্য</span></a>
+          <a href="/pd/workerInfo"><i class="ik ik-package"></i><span>শ্রমিকদের তথ্য</span></a>
         </div>
         <div class="nav-item">
-          <a href="/center/workerNum"><i class="ik ik-box"></i><span>শ্রমিকদের সংখ্যা</span></a>
+          <a href="/pd/workerNum"><i class="ik ik-box"></i><span>শ্রমিকদের সংখ্যা</span></a>
         </div>
 
 
@@ -181,26 +71,136 @@
 
         <div class="nav-lavel">এপিএ</div>
         <div class="nav-item">
-          <a href="/center/apa"><i class="ik ik-box"></i><span>এপিএ রিপোর্টিং</span></a>
+          <a href="/pd/apa"><i class="ik ik-box"></i><span>এপিএ রিপোর্টিং</span></a>
 
         </div>
         <div class="nav-lavel">বিশেষ নারিকেল ও রিভলভিং ফান্ড</div>
         <div class="nav-item">
-          <a href="/center/specialCoconut"><i class="ik ik-box"></i><span>বিশেষ নারিকেল</span></a>
+          <a href="/pd/specialCoconut"><i class="ik ik-box"></i><span>বিশেষ নারিকেল</span></a>
         </div>
         <div class="nav-item">
-          <a href="/center/revolvingFund"><i class="ik ik-box"></i><span>রিভলভিং ফান্ড</span></a>
+          <a href="/pd/revolvingFund"><i class="ik ik-box"></i><span>রিভলভিং ফান্ড</span></a>
         </div>
         <div class="nav-item">
-          <a href="/center/loan"><i class="ik ik-gitlab"></i><span>লোন বিতরণ রিপোর্টিং</span> </a>
-
+          <a href="/pd/loan"><i class="ik ik-gitlab"></i><span>লোন বিতরণ রিপোর্টিং</span> </a>
         </div>
 
-
-
+        <div class="nav-lavel">কোডসমূহ</div>
+        <div class="nav-item">
+          <a href="/pd/newRajosshoCodeTable"><i class="ik ik-command"></i><span>রাজস্ব প্রাপ্তির কোডসমূহ</span></a>
+        </div>
+        <div class="nav-item">
+          <a href="/pd/newKhorochTable"><i class="ik ik-command"></i><span>খরচের (বিএস্টেটমেন্ট) কোডসমূহ</span></a>
+        </div>
+        <div class="nav-item">
+          <a href="/pd/newPodobiTable"><i class="ik ik-command"></i><span>কর্মকর্তা কর্মচারীদের পদবী <br>ও গ্রেডের তালিকা</span></a>
+        </div>
+        <div class="nav-item">
+          <a href="/pd/cropCategoryTable"><i class="ik ik-command"></i><span></span>ফসলের ক্যাটাগরিসমূহ</a>
+        </div>
+        <div class="nav-item">
+          <a href="/pd/apaCategoryTable"><i class="ik ik-command"></i><span></span>এপিএ ক্যাটাগরিসমূহ</a>
+        </div>
+        <div class="nav-lavel">চারা কলম মূল্য তালিকা</div>
+        <div class="nav-item">
+          <a href="/pd/charakolom"><i class="ik ik-package"></i><span>চারা/কলম</span></a>
+        </div>
+        <div class="nav-item">
+          <a href="/pd/folMosholla"><i class="ik ik-box"></i><span>ফল/মসলা ও শাক-সবজি</span></a>
+        </div>
+        <div class="nav-item">
+          <a href="/pd/winterVeg"><i class="ik ik-package"></i><span>শীতকালীন সবজি ও অন্যান্য</span></a>
+        </div>
+        <div class="nav-item">
+          <a href="/pd/summerVeg"><i class="ik ik-box"></i><span>গ্রীষ্মকালীন সবজি ও অন্যান্য</span></a>
+        </div>
+        <div class="nav-item">
+          <a href="/pd/otherFlower"><i class="ik ik-package"></i><span>বিভিন্ন ফুল ও সুদৃশ্য গাছ</span></a>
+        </div>
+        <div class="nav-item">
+          <a href="/pd/seasonalFlower"><i class="ik ik-box"></i><span>মৌসুমী ফুল ও চারা</span></a>
+        </div>
 
       </nav>
     </div>
   </div>
+</div>
+
+<% }else { %>
+<div class="sidebar-content">
+  <div class="nav-container">
+    <nav id="main-menu-navigation" class="navigation-main">
+      <div class="nav-lavel">Navigation</div>
+      <div class="nav-item active">
+        <a href="/center/dashboard"><i class="ik ik-bar-chart-2"></i><span>ড্যাশবোর্ড</span></a>
+      </div>
+      <div class="nav-item ">
+        <a href="/center/center"><i class="ik ik-gitlab"></i><span>সেন্টার ইনফরমেশন</span> </a>
+      </div>
+
+      <div class="nav-lavel">প্রতিবেদন</div>
+      <div class="nav-item">
+        <a href="/center/monthlyProgress"><i class="ik ik-package"></i><span>মাসিক প্রতিবেদন</span></a>
+      </div>
+      <div class="nav-item">
+        <a href="/center/topSheet"><i class="ik ik-box"></i><span>মাসিক টপশীট (উৎপাদন)</span></a>
+      </div>
+      <div class="nav-item">
+        <a href="/center/topSheetBitoron"><i class="ik ik-box"></i><span>মাসিক টপশীট (বিতরণ)</span></a>
+      </div>
+
+      <div class="nav-lavel">হিসাব</div>
+
+      <div class="nav-item">
+        <a href="/center/expense"><i class="ik ik-command"></i><span>খরচের বিবরণী</span></a>
+      </div>
+      <div class="nav-item">
+        <a href="/center/rajossho"><i class="ik ik-command"></i><span>রাজস্ব</span></a>
+      </div>
+
+
+
+      <div class="nav-lavel">কর্মকতা/কর্মচারীদের ডাটাবেজ</div>
+      <div class="nav-item">
+        <a href="/center/chak1"><i class="ik ik-package"></i><span>কর্মকতা/কর্মচারীদের তথ্য</span></a>
+      </div>
+      <div class="nav-item">
+        <a href="/center/chak2"><i class="ik ik-box"></i><span>কর্মকতা/কর্মচারীদের <br>পদের সংখ্যা</span></a>
+      </div>
+
+      <div class="nav-lavel">শ্রমিকদের ডাটাবেজ</div>
+      <div class="nav-item">
+        <a href="/center/workerInfo"><i class="ik ik-package"></i><span>শ্রমিকদের তথ্য</span></a>
+      </div>
+      <div class="nav-item">
+        <a href="/center/workerNum"><i class="ik ik-box"></i><span>শ্রমিকদের সংখ্যা</span></a>
+      </div>
+
+
+
+
+      <div class="nav-lavel">এপিএ</div>
+      <div class="nav-item">
+        <a href="/center/apa"><i class="ik ik-box"></i><span>এপিএ রিপোর্টিং</span></a>
+
+      </div>
+      <div class="nav-lavel">বিশেষ নারিকেল ও রিভলভিং ফান্ড</div>
+      <div class="nav-item">
+        <a href="/center/specialCoconut"><i class="ik ik-box"></i><span>বিশেষ নারিকেল</span></a>
+      </div>
+      <div class="nav-item">
+        <a href="/center/revolvingFund"><i class="ik ik-box"></i><span>রিভলভিং ফান্ড</span></a>
+      </div>
+      <div class="nav-item">
+        <a href="/center/loan"><i class="ik ik-gitlab"></i><span>লোন বিতরণ রিপোর্টিং</span> </a>
+
+      </div>
+
+
+
+
+    </nav>
+  </div>
+</div>
 </div>
 <% }   %>
